Tue Feb 28 01:14:57 1995  John Gilmore  (gnu at toad.com)

	* *.c:  Avoid <krb5/...> includes.
	* parse.c:  Exdent #ifndef to left margin for old compilers.

Wed Feb 22 17:14:31 1995 Keith Vetter (keithv@fusion.com)

	* walk_rtr.c (krb5_walk_realm_tree): formal parameter wasn't declared.
        * send_tgs.c: const in wrong place in the prototype.
        * get_in_tkt.c, preauth.c, rd_cred.c, rd_priv.c, rd_req_dec.c, 
           rd_safe.c: needed a 32 bit abs() function.
        * parse.c: removed call to fprintf on error the windows version
        * send_auth.c: defined for windows the ECONNABORTED errno (will
           be removed when the socket layer is fully implemented).

Tue Feb 21 23:38:34 1995  Theodore Y. Ts'o  (tytso@dcl)

	* mk_cred.c (krb5_mk_cred): Fix argument type to
		krb5_free_cred_enc_part().

Mon Feb 13 20:25:20 1995  Theodore Y. Ts'o  (tytso@dcl)

	* get_in_tkt.c (krb5_get_in_tkt): Fix memory leak --- the default
		encryption types was not being freed.

Fri Feb 10 15:45:59 1995  Theodore Y. Ts'o  <tytso@dcl>

	* rd_req.c (krb5_rd_req): Remove ISODE cruft.

Thu Feb  9 17:43:04 1995  Theodore Y. Ts'o  <tytso@dcl>

	* gc_via_tgt.c (krb5_get_cred_via_tgt): Set up the keyblock's
		etype field correctly (after copying the keyblock, so it
		doesn't get overwritten!)

Mon Feb 06 17:19:04 1995 Chris Provenzano  (proven@mit.edu)

	* get_in_tkt.c (krb5_get_in_tkt())
	* in_tkt_sky.c (krb5_get_in_tkt_with_skey())
	* in_tkt_pwd.c (krb5_get_in_tkt_with_password())
		Removed krb5_keytype, changed krb5_enctype to krb5_enctype *,
		changed krb5_preauthtype to krb5_preauthtype *.

		Changed the args to the key_proc arg of krb5_get_in_tkt()
		to be the following (krb5_context, const krb5_keytype, 
		krb5_data *, krb5_const_pointer, krb5_keyblock **)

	* in_tkt_ktb.c (krb5_get_in_tkt_with_keytab()) Added this routine
		to replace krb5_get_in_tkt_with_skey() in kinit.

	* Makefile.in Added new source file in_tkt_ktb.c.
		